<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtCrearReporte"
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textSize="30dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical" >

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:hint="@string/txtEmpresa"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/nombre"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:hint="@string/txtNombreCliente" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/correo"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:hint="@string/txtCorreo"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telefono"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:hint="@string/txtTelefono"/>


        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:ems="10"
        android:id="@+id/fechaActual"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:hint="@string/txtFechaActual"/>

        </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/txtGuardar"
        android:id="@+id/btGuardarReporte"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:textSize="20dp"/>


</LinearLayout>
